Text: fix issues setting fore and background color.

This firstly fixes the safe assert caused by infinite update loops by
using KisAcyclicSignalConnector. Then it also tries to fix updating
and setting the stroke and fill if these are not otherwise set.

BUG:513207